--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="index.js"></script>
 </head>
+
 <body>
-    
+    <header><h1>Calculadora</h1></header>
+    <div id="box1">
+        <p id="resultado">5768</p>
+        <p id="valores">50000+300+468</p>
+        <div id="box2">
+            <button id="ac">AC</button>
+            <button id="del">DEL</button>
+            <button>%</button>
+            <button>/</button> <br>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>x</button> <br>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>-</button> <br>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>+</button> <br>
+            <button>0</button>
+            <button><strong>.</strong></button>
+            <button id="resultButton">=</button>
+        </div>
+    </div>
+    <footer>
+        <p>Calculadora Interativa Web desenvolvida com HTML, CSS e JavaScript. Esta calculadora oferece uma interface intuitiva com botões e operadores para realizar operações matemáticas básicas. O resultado é exibido em um visor amigável. Um projeto simples e educacional para praticar desenvolvimento front-end e back-end.</p>
+    </footer>
 </body>
+
 </html>
